# qt-websocket

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  sonar-project.properties
cmake/: _Build.bat  _OpenSln.bat  build.sh  clean.sh  run.sh  sonar-project.properties
gitignore/: Generator.bat  generator.sh
src/: main.cpp
src/network/: websocketserver.cpp  websocketserver.h
